syntax = "proto3";
package service;
option java_package = "org.qmstr.grpc.service";

message FileNode {
    string uid = 1;
    string fileNodeType = 2;
    enum Type {
        UNDEF = 0;
        SOURCE = 1;
        INTERMEDIATE = 2;
        TARGET = 3;
    }
    Type fileType = 3;
    string path = 4;
    string name = 5;
    string hash = 6;
    bool broken = 7;
    repeated FileNode derivedFrom = 8;
    repeated InfoNode additionalInfo = 9;
}

message InfoNode {
    string uid = 1;
    string infoNodeType = 2;
    string type = 3;
    double confidenceScore = 4;
    repeated Analyzer analyzer = 5;

    message DataNode {
        string dataNodeType = 1;
        string type = 2;
        string data = 3;
    }
    repeated DataNode dataNodes = 6;
}

message Analyzer {
    string uid = 1;
    string name = 2;
    string analyzerNodeType = 3;
    int64 trustLevel = 4;
    repeated PathSubstitution pathSub = 5;
}

message PathSubstitution {
    string old = 1;
    string new = 2;
}

message PackageNode {
    string uid = 1;
    string name = 2;
    string session = 3;
    string packageNodeType = 4;
    repeated FileNode targets = 5;
    repeated InfoNode additionalInfo = 6;
    string buildConfig = 7;
}

message Event {
    EventClass class = 1;
    string message = 2;
}

enum EventClass {
    ALL = 0;
    PHASE = 1;
    MODULE = 2;
}

message QmstrStateNode {
    string uid = 1;
    string qmstrStateNodeType = 2;
    Phase phase = 3;
    string session = 4;
}

enum Phase {
    INIT = 0;
    BUILD = 1;
    ANALYSIS = 2;
    REPORT = 3;
    FAIL = 4;
}

enum ExceptionType {
    ERROR = 0;
    WARNING = 1;
}